fixed text wrapping issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,10 +102,10 @@ img {
 
 .lamlog > .info {
     text-align: left;
-    line-height: 0.1;
     font-size: 1rem;
     font-weight: bold;
-    line-height: 0.1;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 .lamlog > .info > a {
